# sopran

./: .gitignore  404.html  AGENTS.md  Cargo.toml  LICENSE  NOTICE  PIPELINE.md  PLOTTING.md  README.md  SPEC.md  STORE.md  SURFACE.md  THIRD_PARTY_NOTICES.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  publish.yml
assets/stylesheets/: sopran.css
concepts/maps/: index.html
concepts/object-api/: index.html
concepts/pipeline/: index.html
concepts/plotting/: index.html
concepts/products-schemas/: index.html
concepts/project-case/: index.html
concepts/store/: index.html
concepts/time-units-frames/: index.html
crates/sopran-backend/: Cargo.toml
crates/sopran-backend/src/: main.rs  pace.rs
crates/sopran-native/: Cargo.toml  pyproject.toml
crates/sopran-native/src/: lib.rs
design/: index.html
design/pipeline/: index.html
design/plotting/: index.html
design/spec/: index.html
design/store/: index.html
design/surface/: index.html
docs/: index.md
docs/assets/stylesheets/: sopran.css
docs/concepts/: maps.md  object-api.md  pipeline.md  plotting.md  products-schemas.md  project-case.md  store.md  surface.md  time-units-frames.md
docs/design/: index.md  pipeline.md  plotting.md  spec.md  store.md
docs/en/: index.md
docs/en/concepts/: maps.md  object-api.md  pipeline.md  plotting.md  products-schemas.md  project-case.md  store.md  time-units-frames.md
docs/en/design/: index.md  pipeline.md  plotting.md  spec.md  store.md  surface.md
docs/en/getting-started/: data-store.md  first-analysis.md  installation.md
docs/en/how-to/: load-kaguya-esa1.md  load-kaguya-lrs.md  moon-maps.md  pipeline-plan.md  plotstack.md  visualize-kaguya-lmag.md  write-normalized-parquet.md
docs/en/maps/: moon.md
docs/en/missions/: index.md
docs/en/reference/: api.md  configuration.md  design-notes.md  license.md  pipeline-rules.md  release.md  schemas.md  status.md  store-layout.md
docs/getting-started/: data-store.md  first-analysis.md  installation.md
docs/how-to/: load-kaguya-esa1.md  load-kaguya-lrs.md  moon-maps.md  moon-surface.md  pipeline-plan.md  plotstack.md  visualize-kaguya-lmag.md  write-normalized-parquet.md
docs/maps/: moon.md
docs/missions/: artemis.md  index.md  kaguya-esa1.md  kaguya.md
docs/missions/artemis/: index.md
docs/missions/kaguya/: esa1.md  index.md
docs/overrides/partials/: alternate.html
docs/reference/: api.md  configuration.md  design-notes.md  license.md  pipeline-rules.md  release.md  roadmap.md  schemas.md  status.md  store-layout.md
docs/superpowers/plans/: 2026-07-05-moon-map-module-split.md  2026-07-05-variable-endpoint-pipeline-api.md  2026-07-06-plot-labels-and-api-typing.md
docs/surface/: moon.md
en/: index.html
en/concepts/maps/: index.html
en/concepts/object-api/: index.html
en/concepts/pipeline/: index.html
en/concepts/plotting/: index.html
en/concepts/products-schemas/: index.html
en/concepts/project-case/: index.html
en/concepts/store/: index.html
en/concepts/time-units-frames/: index.html
en/design/: index.html
en/design/pipeline/: index.html
en/design/plotting/: index.html
en/design/spec/: index.html
en/design/store/: index.html
en/design/surface/: index.html
en/getting-started/data-store/: index.html
en/getting-started/first-analysis/: index.html
en/getting-started/installation/: index.html
en/how-to/load-kaguya-esa1/: index.html
en/how-to/load-kaguya-lrs/: index.html
en/how-to/moon-maps/: index.html
en/how-to/pipeline-plan/: index.html
en/how-to/plotstack/: index.html
en/how-to/visualize-kaguya-lmag/: index.html
en/how-to/write-normalized-parquet/: index.html
en/maps/moon/: index.html
en/missions/: index.html
en/missions/artemis/: index.html
en/missions/kaguya/: index.html
en/reference/api/: index.html
en/reference/configuration/: index.html
en/reference/design-notes/: index.html
en/reference/license/: index.html
en/reference/pipeline-rules/: index.html
en/reference/release/: index.html
en/reference/schemas/: index.html
en/reference/status/: index.html
en/reference/store-layout/: index.html
getting-started/data-store/: index.html
getting-started/first-analysis/: index.html
getting-started/installation/: index.html
how-to/load-kaguya-esa1/: index.html
how-to/load-kaguya-lrs/: index.html
how-to/moon-maps/: index.html
how-to/pipeline-plan/: index.html
how-to/plotstack/: index.html
how-to/visualize-kaguya-lmag/: index.html
how-to/write-normalized-parquet/: index.html
maps/moon/: index.html
missions/: index.html
missions/artemis/: index.html
missions/kaguya/: index.html
missions/kaguya/esa1/: index.html
reference/api/: index.html
reference/configuration/: index.html
reference/design-notes/: index.html
reference/license/: index.html
reference/pipeline-rules/: index.html
reference/release/: index.html
reference/schemas/: index.html
reference/status/: index.html
reference/store-layout/: index.html
search/: search_index.json
src/sopran/: __init__.py  config.py  env_check.py  schema_docs.py
src/sopran/bodies/: __init__.py  moon.py
src/sopran/core/: __init__.py  alignment.py  config.py  coverage.py  data.py  database.py  errors.py  events.py  loaders.py  pages.py  pipeline.py  plotting.py  project.py  resampling.py  schema.py  store.py  time.py  view.py
src/sopran/frames/: __init__.py
src/sopran/maps/: __init__.py  raster.py
src/sopran/missions/: __init__.py
tests/: conftest.py  test_alignment.py  test_artemis.py  test_config.py  test_docs_build.py  test_docs_layout.py  test_env_check.py  test_errors.py  test_events.py  test_frames.py  test_kaguya_geometry.py  test_kaguya_lmag.py  test_kaguya_loading.py  test_kaguya_lrs.py  test_kaguya_pace.py  test_maps.py  test_moon_surface.py  test_pipeline.py  test_plotting.py  test_project_case.py  test_project_metadata.py  test_publish_workflow.py  test_rebin.py  test_resampling.py  test_schema.py  test_schema_docs.py  test_store.py  test_typing.py  test_view_api.py
(+59 files in other folders)
