[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "sopran"
dynamic = ["version"]
description = "Satellite Observation Package for Retrieval, Analysis, and Navigation"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "SOPRAN contributors" },
]
keywords = [
  "satellite",
  "space-physics",
  "planetary-science",
  "kaguya",
  "artemis",
  "polars",
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: Apache Software License",
  "Topic :: Scientific/Engineering :: Astronomy",
  "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
  "astropy>=6.0",
  "cdflib>=1.3",
  "matplotlib>=3.8",
  "numpy>=1.26",
  "pandas>=2.1",
  "polars>=1.0",
  "pyarrow>=15.0",
  "requests>=2.32",
  "scipy>=1.11",
  "xarray>=2024.3",
]

[project.optional-dependencies]
kaguya = [
  "pdr>=0.7.1",
  "pds4-tools>=1.4",
  "spiceypy>=6.0",
]
artemis = [
  "cdasws>=1.8",
  "hapiclient>=0.2",
  "pyspedas>=2.0",
  "spacepy>=0.7",
]
moon = [
  "cartopy>=0.23",
  "geopandas>=1.0",
  "pyogrio>=0.10",
  "pyproj>=3.7",
  "rasterio>=1.4",
  "rioxarray>=0.18",
  "shapely>=2.0",
  "spiceypy>=6.0",
]
viz = [
  "bokeh>=3.4",
  "dask>=2024.1",
  "datashader>=0.16",
  "geoviews>=1.12",
  "holoviews>=1.19",
  "hvplot>=0.10",
  "panel>=1.4",
]
geospace = [
  "aacgmv2>=2.7",
  "apexpy>=2.1",
  "plasmapy>=2024.10",
  "spacepy>=0.7",
  "sunpy>=5.0",
]
full = [
  "aacgmv2>=2.7",
  "apexpy>=2.1",
  "astroquery>=0.4.7",
  "bokeh>=3.4",
  "cartopy>=0.23",
  "cdasws>=1.8",
  "dask>=2024.1",
  "datashader>=0.16",
  "geopandas>=1.0",
  "geoviews>=1.12",
  "hapiclient>=0.2",
  "holoviews>=1.19",
  "hvplot>=0.10",
  "panel>=1.4",
  "pdr>=0.7.1",
  "pds4-tools>=1.4",
  "plasmapy>=2024.10",
  "pyogrio>=0.10",
  "pyproj>=3.7",
  "pyspedas>=2.0",
  "rasterio>=1.4",
  "rioxarray>=0.18",
  "shapely>=2.0",
  "spacepy>=0.7",
  "spiceypy>=6.0",
  "sunpy>=5.0",
  "zarr>=2.18",
]
dev = [
  "build>=1.2",
  "hatchling>=1.25",
  "mypy>=1.10",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5",
]

[tool.hatch.version]
path = "src/sopran/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
  "/AGENTS.md",
  "/LICENSE",
  "/NOTICE",
  "/PIPELINE.md",
  "/PLOTTING.md",
  "/README.md",
  "/SPEC.md",
  "/STORE.md",
  "/SURFACE.md",
  "/THIRD_PARTY_NOTICES.md",
  "/pyproject.toml",
  "/src",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sopran"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true
