[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "sopran"
dynamic = ["version"]
description = "Satellite Observation Package for Retrieval, Analysis, and Navigation"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "SOPRAN contributors" },
]
keywords = [
  "satellite",
  "space-physics",
  "planetary-science",
  "kaguya",
  "artemis",
  "polars",
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: Apache Software License",
  "Topic :: Scientific/Engineering :: Astronomy",
  "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
  "numpy>=1.26",
  "pandas>=2.1",
]

[project.scripts]
sopran-env-check = "sopran.env_check:main"
sopran-schema-docs = "sopran.schema_docs:main"

[project.optional-dependencies]
kaguya = [
  "cdflib>=1.3",
  "pdr>=0.7.1",
  "pds4-tools>=1.4",
  "polars>=1.0",
  "pyarrow>=15.0",
  "spiceypy>=6.0",
  "xarray>=2024.3",
]
artemis = [
  "cdasws>=1.8",
  "cdflib>=1.3",
  "hapiclient>=0.2",
  "polars>=1.0",
  "pyspedas>=2.0",
  "spacepy>=0.7",
  "xarray>=2024.3",
]
moon = [
  "cartopy>=0.23; platform_system != 'Windows' or python_version < '3.14'",
  "geopandas>=1.0",
  "pyogrio>=0.10",
  "pyproj>=3.7",
  "rasterio>=1.4",
  "rioxarray>=0.18",
  "shapely>=2.0",
  "spiceypy>=6.0",
]
viz = [
  "bokeh>=3.4",
  "dask>=2024.1",
  "datashader>=0.16",
  "geoviews>=1.12; platform_system != 'Windows' or python_version < '3.14'",
  "holoviews>=1.19",
  "hvplot>=0.10",
  "matplotlib>=3.8",
  "panel>=1.4",
]
geospace = [
  "aacgmv2>=2.7; platform_system != 'Windows' or python_version < '3.14'",
  "apexpy>=2.1; platform_system != 'Windows' or python_version < '3.14'",
  "plasmapy>=2024.10",
  "spacepy>=0.7",
  "sunpy>=5.0",
]
native = [
  "aacgmv2>=2.7",
  "apexpy>=2.1",
  "cartopy>=0.23",
  "geoviews>=1.12",
]
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.25",
  "pymdown-extensions>=10.8",
]
full = [
  "aacgmv2>=2.7; platform_system != 'Windows' or python_version < '3.14'",
  "apexpy>=2.1; platform_system != 'Windows' or python_version < '3.14'",
  "astroquery>=0.4.7",
  "astropy>=6.0",
  "bokeh>=3.4",
  "cartopy>=0.23; platform_system != 'Windows' or python_version < '3.14'",
  "cdflib>=1.3",
  "cdasws>=1.8",
  "dask>=2024.1",
  "datashader>=0.16",
  "geopandas>=1.0",
  "geoviews>=1.12; platform_system != 'Windows' or python_version < '3.14'",
  "hapiclient>=0.2",
  "holoviews>=1.19",
  "hvplot>=0.10",
  "matplotlib>=3.8",
  "panel>=1.4",
  "pdr>=0.7.1",
  "pds4-tools>=1.4",
  "plasmapy>=2024.10",
  "polars>=1.0",
  "pyarrow>=15.0",
  "pyogrio>=0.10",
  "pyproj>=3.7",
  "pyspedas>=2.0",
  "rasterio>=1.4",
  "requests>=2.32",
  "rioxarray>=0.18",
  "scipy>=1.11",
  "shapely>=2.0",
  "spacepy>=0.7",
  "spiceypy>=6.0",
  "sunpy>=5.0",
  "xarray>=2024.3",
  "zarr>=2.18",
]
dev = [
  "build>=1.2",
  "cdflib>=1.3",
  "hatchling>=1.25",
  "mypy>=1.10",
  "pandas-stubs>=2.1",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "twine>=6.0",
]

[tool.hatch.version]
path = "src/sopran/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
  "/AGENTS.md",
  "/LICENSE",
  "/NOTICE",
  "/README.md",
  "/THIRD_PARTY_NOTICES.md",
  "/docs",
  "/mkdocs.yml",
  "/pyproject.toml",
  "/src",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sopran"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["cdflib", "spiceypy", "zarr.*"]
ignore_missing_imports = true
follow_imports = "skip"
