[package]
name = "sopran-native"
version = "0.1.0"
edition = "2021"

[lib]
name = "sopran_native"
crate-type = ["cdylib", "rlib"]

[dependencies]
byteorder = "1.5"
flate2 = "1.0"
ndarray = "0.17"
numpy = "0.29"
pyo3 = "0.29"
thiserror = "2.0"

[features]
default = []
extension-module = ["pyo3/extension-module"]
